Changes in quota-tools from 3.07 to 3.08
* Fixed bug in convertquota(8) when quota was turned on during converting (Jan Kara)
* Add support for XFS filesystems without root special casing (Christoph Hellwig)
* XFS documentation updates (Nathan Scott)

Changes in quota-tools from 3.06 to 3.07
* Added creation of bin and sbin dir during make install; removed hardcoded 
  /sbin directory for some utilities. (Jan Kara)
* Add support for 32 bit uid's and gid's when using EXT2_DIRECT. (Michael Meskes)
* updated manpage of rpc.rquotad (Jan Kara)
* setquota is disabled by default in rpc.rquotad (Jan Kara)
* setquota using RPC is disabled by default in configure (Jan Kara)
* rised maximal number of mountpoint to 256 (Jan Kara)
* small fix in configure (Nathan Scott)
* small fix in quotacheck(8) docs (Jan Kara)
* fixed quotacheck(8) to continue when old quota files were not found (Jan Kara)
* quota(1) now doesn't report failure to connect to rpc.rquotad server when -Q specified (Jan Kara)
* add quota(1) option -l (report only local filesystems) (Jan Kara)
* warnquota(8) now also mails specified member of the group about violation of the group quotas
  when -g option is specified (Jan Kara)
* added options by which user can specify whether repquota(8) should translate names in
  big chunks by scanning all users or individually. Added automagic detection using nsswitch.conf
  which behaviour should lead to faster translating. (Jan Kara)

Changes in quota-tools from 3.05 to 3.06
* fixed caching of libwrap configure result (Jan Kara)
* fixed copying of quotafile name from mtab (?)
* warnquota.conf is now installed in config dir (Jan Kara)
* updated format detection to reflect changes in kernel interface in 2.5.18 (Jan Kara)
* fixed scanning of non-mountpoint directories (Jan Kara)
* fixed detection of XFS format (Jan Kara)
* fixed printing of 'over softlimit sign' in quota(1) (Jan Kara)

Changes in quota-tools from 3.04 to 3.05