@@ -4,10 +4,12 @@
 #include "quotaio.h"
 
 struct dquot *getprivs(qid_t id, struct quota_handle ** handles, int quiet);
-int putprivs(struct dquot * qlist);
+int putprivs(struct dquot * qlist, int flags);
 int editprivs(char *tmpfile);
 int writeprivs(struct dquot * qlist, int outfd, char *name, int quotatype);
 int readprivs(struct dquot * qlist, int infd);
+int writeindividualtimes(struct dquot * qlist, int outfd, char *name, int quotatype);
+int readindividualtimes(struct dquot * qlist, int infd);
 int writetimes(struct quota_handle ** handles, int outfd);
 int readtimes(struct quota_handle ** handles, int infd);
 void freeprivs(struct dquot * qlist);
