@@ -2,7 +2,7 @@
 .SH NAME
 setquota \- set disk quotas
 .SH SYNOPSIS
-.B /usr/sbin/setquota
+.B setquota
 [
 .B \-r
 ]
@@ -24,7 +24,7 @@ setquota \- set disk quotas
 |
 .I filesystem...
 .LP
-.B /usr/sbin/setquota
+.B setquota
 [
 .B \-r
 ]
@@ -46,7 +46,7 @@ setquota \- set disk quotas
 |
 .I filesystem...
 .LP
-.B /usr/sbin/setquota
+.B setquota
 .B \-t
 [
 .B \-u
@@ -57,6 +57,24 @@ setquota \- set disk quotas
 .B \-F
 .I quotaformat
 ]
+.I block-grace
+.I inode-grace
+.B \-a
+|
+.I filesystem...
+.LP
+.B setquota
+.B \-T
+[
+.B \-u
+|
+.B \-g
+]
+[
+.B \-F
+.I quotaformat
+]
+.I name
 .I block-grace
 .I inode-grace
 .B \-a
@@ -106,6 +124,13 @@ Set grace times for users/groups. Times
 and
 .B inode-grace
 are specified in seconds.
+.TP
+.B -T
+Alter times for individual user/group when softlimit is enforced. Times
+.B block-grace
+and
+.B inode-grace
+are specified in seconds or can be string 'unset'.
 .TP
 .B -a
 Go through all filesystems with quota in
